# SalesGPT

./: .dockerignore  .env.example  .gitignore  CHANGELOG.txt  CONTRIBUTING.md  Dockerfile.backend  LICENSE  Makefile  README-api.md  README.md  agent_setup.json  automate_sales.py  base_logger.py  calendly.py  docker-compose.yml  langchain.ipynb  license.md  make_call.py  pyproject.toml  quickstart.py  requirements-dev.txt  requirements.txt  requirements_poetry.txt  run.py  run_api.py  run_beta.py  run_beta_gr.py  run_with_tools.py  sales_agent.ipynb  sales_agent_with_context.ipynb  sales_gpt.py  sample_product_catalog.txt  setup.py  streaming_generator_example.py  test_mail.py
.github/workflows/: poetry_unit_tests.yml  poetry_unit_testy.yml  unit-tests.yml
api/: config.py  run_api.py
api-website/: conf.py  index.rst  modules.rst  package.json  salesgpt.rst
api-website/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  run.doctree  run_api.doctree  salesgpt.doctree
api-website/_build/html/: .buildinfo  genindex.html  index.html  layout.html  modules.html  objects.inv  py-modindex.html  run.html  run_api.html  salesgpt.html  search.html  searchindex.js
api-website/_static/: google_analytics_tracker.js
api-website/_templates/: layout.html
api-website/salesgpt/: modules.rst  salesgpt.prompts.rst  salesgpt.stages.rst  salesgpt.version.rst
api/my_redis/: redis.py
api/redis/: redis.py
api/schemas/: chatDTO.py
chatbot-ui/: App.js  package-lock.json  package.json
chatbot-ui/src/: App.js
examples/: example_insurance_broker_cn_setup.json  example_product_price_id_mapping.json  mcdonalds_menu.txt  mcdonalds_worker.json  sales_agent_with_context.ipynb  sample_product_catalog.txt  sample_product_catalog_2.txt  streaming_generator_example.py
frontend/: .dockerignore  Dockerfile.frontend  README.md  components.json  next.config.mjs  package-lock.json  package.json  start-dev.sh  tsconfig.json
my-app/: tsconfig.json
salesgpt/: agents.py  chains.py  chats.py  custom_invoke.py  initdb.py  invoke_custom.py  logger.py  models.py  parsers.py  prompts.py  sales_gpt.py  salesgptapi.py  stages.py  templates.py  tools.py  version.py
salesgpt_beta/: agents.py  daos.py  initdb.py  logger.py  models.py  prompts.py  stages.py  tools.py
tests/: conftest.py  test_api.py  test_beta_tools.py  test_chains.py  test_database.py  test_salesgpt.py  test_tools.py
tests/test_data/: sample_product_catalog.txt
website/: docusaurus.config.js  package-lock.json  package.json  sidebars.js  sidebars_1.js
website/docs/: extra.md  intro.md
(+87 files in other folders)
