[tool.poetry]
name = "SalesGPT"
version = "0.1.0"
description = ""
authors = ["chemik-bit <honza.michna.00@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
langchain = "^0.0.340"
openai = "^1.3.5"
chromadb = "^0.4.18"
tiktoken = "^0.5.1"
pydantic = "^2.5.2"
litellm = "^1.7.5"
ipykernel = "^6.26.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
